<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eternal.carl.com.eternally.module.NewTimerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/addItemRowMarginBottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/addItemTitleWidth"
                android:layout_height="match_parent"
                android:gravity="center|bottom"
                android:text="@string/txt_new_title"
                android:textSize="@dimen/addItemTitleFontSize" />

            <EditText
                android:id="@+id/addTimerTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/input_bg"
                android:textSize="@dimen/addItemTextFontSize"
                android:paddingLeft="@dimen/addItemInputBoxHorizonPadding"
                android:paddingRight="@dimen/addItemInputBoxHorizonPadding"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/addItemRowMarginBottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/addItemTitleWidth"
                android:layout_height="match_parent"
                android:gravity="center|bottom"
                android:text="@string/txt_new_desc"
                android:textSize="@dimen/addItemTitleFontSize" />

            <EditText
                android:id="@+id/addTimerDesc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine"
                android:background="@drawable/input_bg"
                android:textSize="@dimen/addItemTextFontSize"
                android:paddingLeft="@dimen/addItemInputBoxHorizonPadding"
                android:paddingRight="@dimen/addItemInputBoxHorizonPadding"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/addItemRowMarginBottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/addItemTitleWidth"
                android:layout_height="match_parent"
                android:gravity="center|bottom"
                android:text="@string/txt_new_date"
                android:textSize="@dimen/addItemTitleFontSize" />

            <TextView
                android:id="@+id/addTimerDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:background="@drawable/input_bg"
                android:clickable="true"
                android:textSize="@dimen/addItemTextFontSize"
                android:paddingLeft="@dimen/addItemInputBoxHorizonPadding"
                android:paddingRight="@dimen/addItemInputBoxHorizonPadding"
                android:gravity="center"/>


            <TextView
                android:layout_width="@dimen/addItemTitleWidth"
                android:layout_height="match_parent"
                android:gravity="center|bottom"
                android:text="@string/txt_new_time"
                android:textSize="@dimen/addItemTitleFontSize"/>

            <TextView
                android:id="@+id/addTimerTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/input_bg"
                android:clickable="true"
                android:textSize="@dimen/addItemTextFontSize"
                android:paddingLeft="@dimen/addItemInputBoxHorizonPadding"
                android:paddingRight="@dimen/addItemInputBoxHorizonPadding"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/addButtonMarginTopBottom"
        android:layout_marginBottom="@dimen/addButtonMarginTopBottom">
        <TextView
            android:id="@+id/addTimerButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/addButtonHeight"
            android:background="@drawable/button_blue_bg"
            android:clickable="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/addButtonTextColor"
            android:textSize="@dimen/addButtonTextSize"
            android:textStyle="normal"
            android:text="@string/button_text_add"
            android:minWidth="@dimen/addButtonMinWidth"
            android:maxWidth="@dimen/addButtonMaxWidth">
        </TextView>
        <View
            android:layout_width="@dimen/addButtonHeight"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/cancelTimerButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/addButtonHeight"
            android:background="@drawable/button_blue_bg"
            android:clickable="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/addButtonTextColor"
            android:textSize="@dimen/addButtonTextSize"
            android:textStyle="normal"
            android:text="@string/button_text_cancel"
            android:minWidth="@dimen/addButtonMinWidth"
            android:maxWidth="@dimen/addButtonMaxWidth">
        </TextView>

        </LinearLayout>
</LinearLayout>
